<resources>
    <string name="app_name">Listador de Fundos</string>
    <string name="carregando_fundos">Carregando fundos. Por favor aguarde.</string>
    <string name="card_rentabilidade_12m">Rentabilidade: </string>
    <string name="card_aplicacao_minima">Aplicação mínima: </string>
    <string name="input_aplicacao_minima">Aporte</string>
    <string name="input_perfil">Perfil</string>

    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <string name="investir">Investir</string>
    <string name="nao_ha_videos_disponiveis">Não há vídeos disponíveis para este fundo.</string>
    <string name="performance">Performance</string>
    <string name="estrategia">Estratégia</string>
    <string name="thumbnail_descricao">Vídeo sobre o fundo</string>
    <string name="midia">Mídia</string>
    <string name="cnpj">CNPJ: </string>
    <string name="nome">Nome: </string>
    <string name="descricao">Descrição: </string>
    <string name="administradora">Administradora: </string>
    <string name="horario_limite">Horário limite: </string>
    <string name="liquidez_resgate">Liquidez de resgate: </string>
    <string name="rentabilidade_indisponivel">Rentabilidade indisponível</string>
    <string name="indisponivel">Indisponível</string>
    <string name="orama_standard">Órama Standard</string>
    <string name="permanencia_minima">Permanência mínima: </string>
    <string name="movimentacao_minima">Movimentação mínima: </string>
    <string name="taxa_adm">Taxa administrativa: </string>
    <string name="taxa_performance">Taxa de perf.: </string>
    <string name="tipo_fundo">Tipo de fundo: </string>
    <string name="rentabilidade">Rentabilidade</string>
    <string name="perfil">Perfil</string>
    <string name="caracteristicas">Características</string>
    <string name="dia">Dia</string>
    <string name="mes">Mês</string>
    <string name="doze_meses">12 meses</string>
    <string name="ano">Ano</string>
    <string name="tipo_investidor">Tipo de investidor: </string>
    <string name="investidor_qualificado">Investidor qualificado: </string>
    <string name="nivel_risco">Nível de risco: </string>
    <string name="renda_fixa">Renda Fixa</string>
    <string name="multimercado">Multimercado</string>
    <string name="acoes">Ações</string>
    <string name="cambial">Cambial</string>
    <string name="referenciado">Referenciado</string>
    <string name="creditorio">Direito Creditório</string>
    <string-array name="aportes" >
        <item>Todos</item>
        <item>Até R$1.000</item>
        <item>Até R$5.000</item>
        <item>Até R$10.000</item>
    </string-array>
    <string-array name="perfis" >
        <item>Todos</item>
        <item>Conservador</item>
        <item>Moderado</item>
        <item>Arrojado</item>
    </string-array>
</resources>