<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".activities.FundoActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Titles"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profitability_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/rentabilidade"
        style="@style/Subtitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundo_fullName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profitability_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/dia"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fundo_profitability_subtitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profitability_day_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/fundo_profitability_day"
        app:layout_constraintStart_toStartOf="@id/fundo_profitability_day"
        app:layout_constraintTop_toBottomOf="@id/fundo_profitability_day" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profitability_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/mes"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/fundo_profitability_day"
        app:layout_constraintTop_toBottomOf="@+id/fundo_profitability_subtitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profitability_month_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/fundo_profitability_month"
        app:layout_constraintStart_toStartOf="@id/fundo_profitability_month"
        app:layout_constraintTop_toBottomOf="@id/fundo_profitability_month" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profitability_12m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/doze_meses"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/fundo_profitability_month"
        app:layout_constraintTop_toBottomOf="@+id/fundo_profitability_subtitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profitability_12m_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/fundo_profitability_12m"
        app:layout_constraintStart_toStartOf="@id/fundo_profitability_12m"
        app:layout_constraintTop_toBottomOf="@id/fundo_profitability_12m" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profitability_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/ano"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/fundo_profitability_12m"
        app:layout_constraintTop_toBottomOf="@+id/fundo_profitability_subtitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profitability_year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/fundo_profitability_year"
        app:layout_constraintStart_toStartOf="@id/fundo_profitability_year"
        app:layout_constraintTop_toBottomOf="@id/fundo_profitability_year" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fundo_profile_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/perfil"
        style="@style/Subtitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fundo_profitability_subtitle" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/fundo_profile_investor_type"
        android:text="@string/tipo_investidor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fundo_profile_subtitle" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:id="@+id/fundo_profile_investor_type_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fundo_profile_subtitle" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/fundo_profile_fund_risk"
        android:text="@string/nivel_risco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fundo_profile_investor_type" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:id="@+id/fundo_profile_fund_risk_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fundo_profile_investor_type" />
</androidx.constraintlayout.widget.ConstraintLayout>